--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Dune Pebbler</title>
+    <title>Confetti cms</title>
   </head>
   <body class="overflow-hidden">
     <div id="app"></div>
